//
//  AccessibilityConstants.swift
//  RawalFlipGrid
//
//  Created by Bansri Rawal on 11/4/21.
//

import Foundation

struct AccessibilityIdentifiers{
    
    struct RegisterScreen{
        static let registerEmailField = "registerEmailField"
        static let registerPasswordField = "registerPasswordField"
        static let registerNameField = "registerNameField"
        static let registerWebsiteField = "registerWebsiteField"
        static let registerButton = "registerButton"
    }
 
}
